[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main/Foreground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]
[ext_resource path="res://Main/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Main/SettingsButton.gd" type="Script" id=4]
[ext_resource path="res://SeaweedScript-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Settings" type="GridContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.5
margin_top = -266.0
margin_right = 206.5
margin_bottom = 266.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Change" type="Button" parent="Settings"]
margin_right = 154.0
margin_bottom = 44.0
text = "Change"
script = ExtResource( 4 )
_action_type = "Movement"

[node name="Movement" type="Label" parent="Settings"]
margin_left = 158.0
margin_top = 8.0
margin_right = 413.0
margin_bottom = 36.0
text = "Movemet-WASD"
align = 1

[node name="Change2" type="Button" parent="Settings"]
margin_top = 48.0
margin_right = 154.0
margin_bottom = 92.0
text = "Change"
script = ExtResource( 4 )
_action_type = "Pickup"

[node name="Pickup" type="Label" parent="Settings"]
margin_left = 158.0
margin_top = 56.0
margin_right = 413.0
margin_bottom = 84.0
text = "Pickup Item-F"
align = 1

[node name="Change3" type="Button" parent="Settings"]
margin_top = 96.0
margin_right = 154.0
margin_bottom = 140.0
text = "Change"
script = ExtResource( 4 )
_action_type = "Discard"

[node name="Discard" type="Label" parent="Settings"]
margin_left = 158.0
margin_top = 104.0
margin_right = 413.0
margin_bottom = 132.0
text = "Discard Item-R"
align = 1

[node name="Change4" type="Button" parent="Settings"]
margin_top = 144.0
margin_right = 154.0
margin_bottom = 188.0
text = "Change"
script = ExtResource( 4 )
_action_type = "Equip"

[node name="Equip" type="Label" parent="Settings"]
margin_left = 158.0
margin_top = 152.0
margin_right = 413.0
margin_bottom = 180.0
text = "Equip Item-Left Click"
align = 1

[node name="Change5" type="Button" parent="Settings"]
margin_top = 192.0
margin_right = 154.0
margin_bottom = 236.0
text = "Change"
script = ExtResource( 4 )
_action_type = "Discard_Inventory"

[node name="DiscardInventory" type="Label" parent="Settings"]
margin_left = 158.0
margin_top = 200.0
margin_right = 413.0
margin_bottom = 228.0
text = "Discard Inventory Item-Right Click"
align = 1

[node name="Change6" type="Button" parent="Settings"]
margin_top = 240.0
margin_right = 154.0
margin_bottom = 284.0
text = "Change"
script = ExtResource( 4 )
_action_type = "Attack"

[node name="Attack" type="Label" parent="Settings"]
margin_left = 158.0
margin_top = 248.0
margin_right = 413.0
margin_bottom = 276.0
text = "Attack-Left Click"
align = 1

[node name="Change7" type="Button" parent="Settings"]
margin_top = 288.0
margin_right = 154.0
margin_bottom = 332.0
text = "Change"
script = ExtResource( 4 )
_action_type = "Inventory"

[node name="Inventory" type="Label" parent="Settings"]
margin_left = 158.0
margin_top = 296.0
margin_right = 413.0
margin_bottom = 324.0
text = "Expand Inventory-I"
align = 1

[node name="Change8" type="Button" parent="Settings"]
margin_top = 336.0
margin_right = 154.0
margin_bottom = 380.0
text = "Change"
script = ExtResource( 4 )
_action_type = "Interact"

[node name="Interact" type="Label" parent="Settings"]
margin_left = 158.0
margin_top = 344.0
margin_right = 413.0
margin_bottom = 372.0
text = "Interact-E"
align = 1

[node name="Fullscreen" type="CheckButton" parent="Settings"]
margin_top = 384.0
margin_right = 154.0
margin_bottom = 432.0
text = "Fullscreen"

[node name="Mute" type="CheckButton" parent="Settings"]
margin_left = 158.0
margin_top = 384.0
margin_right = 413.0
margin_bottom = 432.0
text = "Mute"

[node name="Label" type="Label" parent="Settings"]
margin_top = 436.0
margin_right = 154.0
margin_bottom = 464.0
text = "Sound Effects Volume"

[node name="Label2" type="Label" parent="Settings"]
margin_left = 158.0
margin_top = 436.0
margin_right = 413.0
margin_bottom = 464.0
text = "Music Volume"
align = 1

[node name="SFXVolume" type="HSlider" parent="Settings"]
margin_top = 468.0
margin_right = 154.0
margin_bottom = 484.0
min_value = -6.0
max_value = 6.0

[node name="MusicVolume" type="HSlider" parent="Settings"]
margin_left = 158.0
margin_top = 468.0
margin_right = 413.0
margin_bottom = 484.0
min_value = -6.0
max_value = 6.0

[node name="Back" type="Button" parent="Settings"]
margin_top = 488.0
margin_right = 154.0
margin_bottom = 532.0
text = "Back"

[node name="Reset" type="Button" parent="Settings"]
margin_left = 158.0
margin_top = 488.0
margin_right = 413.0
margin_bottom = 532.0
text = "Reset to Defaults"

[node name="Story" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -131.0
margin_bottom = 131.0

[node name="StoryLabel" type="Label" parent="Story"]
margin_right = 600.0
margin_bottom = 214.0
text = "The \"name here\" people's sun was dying. They were forced to migrate underground, where they found a lake of magical blue liquid and animated stones. They learned to harness the magic of the liquid, but all the while their dying star was getting closer and closer to destroying their world. The people built a stabilizer device, but the liquid was not powerful enough to use it. They sent their most skilled warrior into the realm of the stone men with the mission of returning with three Othal crystals..."
align = 1
valign = 1
autowrap = true

[node name="StoryBack" type="Button" parent="Story"]
margin_left = 250.0
margin_top = 300.0
margin_right = 350.0
margin_bottom = 262.0
text = "Back"

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -70.0
margin_right = 35.5
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Menu/VBoxContainer"]
margin_right = 72.0
margin_bottom = 44.0
text = "Play"

[node name="Tutorial" type="Button" parent="Menu/VBoxContainer"]
margin_top = 48.0
margin_right = 72.0
margin_bottom = 92.0
text = "Tutorial"

[node name="Story" type="Button" parent="Menu/VBoxContainer"]
margin_top = 96.0
margin_right = 72.0
margin_bottom = 140.0
text = "Story"

[node name="Settings" type="Button" parent="Menu/VBoxContainer"]
margin_top = 144.0
margin_right = 72.0
margin_bottom = 188.0
text = "Settings"

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu"]
anchor_right = 1.0
margin_bottom = 87.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/VBoxContainer2"]
margin_right = 600.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
text = "Fathom"
align = 1

[node name="Label2" type="Label" parent="Menu/VBoxContainer2"]
margin_top = 113.0
margin_right = 600.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 2 )
text = "incursion"
align = 1
[connection signal="change_input" from="Settings/Change" to="." method="_on_Change_change_input"]
[connection signal="change_input" from="Settings/Change2" to="." method="_on_Change_change_input"]
[connection signal="change_input" from="Settings/Change3" to="." method="_on_Change_change_input"]
[connection signal="change_input" from="Settings/Change4" to="." method="_on_Change_change_input"]
[connection signal="change_input" from="Settings/Change5" to="." method="_on_Change_change_input"]
[connection signal="change_input" from="Settings/Change6" to="." method="_on_Change_change_input"]
[connection signal="change_input" from="Settings/Change7" to="." method="_on_Change_change_input"]
[connection signal="change_input" from="Settings/Change8" to="." method="_on_Change_change_input"]
[connection signal="toggled" from="Settings/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="Settings/Mute" to="." method="_on_Mute_toggled"]
[connection signal="value_changed" from="Settings/SFXVolume" to="." method="_on_SFXVolume_value_changed"]
[connection signal="value_changed" from="Settings/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Settings/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Story/StoryBack" to="." method="_on_StoryBack_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Story" to="." method="_on_Story_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
